compiler/tests/success/subroutines/loop.jazz
fn aux(reg u64 x) -> reg u64 { return x; }

export
fn main(reg u64 x) -> reg u64 {
reg u64 result;

result = x;

while { result = aux(result); } (x > 0) {
result = aux(result);
x -= 1;
}

return result;
}
