compiler/tests/fail/slh/x86-64/mov_msf.jazz
export
fn main() -> reg u64 {
    reg u64 x;
    x = 0;
    x = #mov_msf(x);
    return x;
}
